# code-analysis

./: .gitignore  readme.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/api/: analysis.py  auth.py  config.py  progress.py  project.py
backend/core/: db.py  security.py
backend/migrations/models/: 0_20260114141955_init.py  1_20260115124812_update.py  2_20260115150952_increase_status_length.py  3_20260115153556_add_pgvector.py  4_20260116110533_update.py  5_20260116170758_add_analysis_models.py  6_20260117144343_add_progress_tracking.py  7_20260118154106_add_database_models.py
backend/models/: analysis.py  progress.py  projects.py  users.py
backend/schemas/: project_schema.py  user_schema.py
backend/services/: analysis_service.py  langgraph_orchestrator.py  metadata_extractor.py  orchestrator.py  progress_manager.py  project_service.py  web_search.py
backend/services/agents/: api_agent.py  architecture_agent.py  database_agent.py  dependency_agent.py  security_agent.py  setup_agent.py
frontend/: .gitignore  README.md  api_client.py  main.py  progress_monitor.py  pyproject.toml
